[package]
name = "bentos"
version = "0.1.0"
authors = ["milkvolleyball"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86_64 = "0.10"
bootloader = {version = "0.9.1", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
uart_16550 = "0.2.5"
pic8259_simple = "0.1.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.8.4"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33  #(0x10<<1) | 1, 0001 0000 <<1 = 0010 0000 | 1 = 0010 0001 = 32
test-timeout = 100  #(in secs)

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false